--- a/app/src/main/assets/prism.html
+++ b/app/src/main/assets/prism.html
@@ -10,8 +10,8 @@
 <body>
 <h1>Just Testing PrismJS</h1>
 <p>Writing HTML for code! blah!</p>
-<pre data-line="15-25"><code class="language-kotlin">
-class MainActivity : AppCompatActivity() {
+<pre class="line-numbers" data-line="15-25">
+<code class="language-kotlin">class MainActivity : AppCompatActivity() {
     private lateinit var binding: ActivityMainBinding
     private lateinit var navController: NavController
     private lateinit var appBarConfiguration: AppBarConfiguration
@@ -40,6 +40,7 @@ class MainActivity : AppCompatActivity() {
         return isHandled
     }
 }
-</code></pre>
+</code>
+</pre>
 </body>
 </html>
