--- a/app/src/main/assets/prism.html
+++ b/app/src/main/assets/prism.html
@@ -4,8 +4,11 @@
     <!-- https://developer.chrome.com/multidevice/webview/pixelperfect -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="www/main.css" rel="stylesheet"/>
+
+    <!-- https://prismjs.com/ -->
     <link href="www/prism.css" rel="stylesheet"/>
     <script src="www/prism.js"></script>
+    <!-- HTML/XML encode entities: https://mothereff.in/html-entities -->
 </head>
 <body>
 <h1>Just Testing PrismJS</h1>
